--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import "tailwindcss";
 
 html,body{
  margin: 0;
  padding: 0;  
+ font-family: "Space Grotesk", sans-serif;
  background: #181C14;
  color: #f3f4f6;
 }
