Working on the UI of the navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,8 @@ html,body{
  padding: 0;  
  overflow-x: hidden;
  font-family: "Space Grotesk", sans-serif;
- background: #181C14;
+ background: rgba(2, 6, 23, 0.8);
  color: #f3f4f6;
 }
+
+
