adding better pop up animation to the login sign and update

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,26 @@ html,body{
  color: #f3f4f6;
 }
 
+@layer utilities{
+    @keyframes popup{
+    0% {
+      transform: scale(0.5);
+      opacity: 0;
+    }
+    60% {
+      transform: scale(1.1);
+      opacity: 1;
+    }
+    80% {
+      transform: scale(0.95);
+      opacity: 1;
+    }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+    }
+    .animate-popup{
+  animation:popup 1s linear  ;
+}
+}
